<resources>
    <string name="app_name">GADSLeaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_submission">Project Submission</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="skill_badge" />
    <string name="score">Score</string>
    <string name="country">country</string>
</resources>