<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="65dp"
        android:layout_height="72dp"
        android:layout_weight="15"
        android:contentDescription="@string/skill_badge"
        android:padding="8dp"
        app:srcCompat="@drawable/iq" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="85"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name_iq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="35"
                android:text="@string/score"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_country_iq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="65"
                android:text="@string/country" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>